--- a/w/wo/wor/worklife.com.html
+++ b/w/wo/wor/worklife.com.html
@@ -1,47 +1,48 @@
-<!--The following is the downloaded HTML source of the worklife.com privacy policy that was archived on 2005-05-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050517000730id_/http%3A//worklife.com/MKT/Content/JS/default.asp%3Fpg%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the worklife.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614205216id_/http%3A//worklife.com/MKT/Content/JS/default.asp%3Fpg%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head>
 
 
-	<meta name="robots" content="index,follow">
-	<meta name="description" content="Details national internet employment site 4Jobs.com free corporate job site hosting and career tools from 4Jobs corporate career site service, including resume search, job posting and resume posting.">
-	<meta name="keywords" content="career, search engine, monster resume database, career planning, FREE resume site, b2b, professional, job search agents, resume posting, business professional members, FREE job alerts, business professional member benefits, how to post resume, search jobs, contract, permanent, full-time, programming, consulting, high tech, computers, placement, employment, permanent, career, business, hiring, agreement, positions, want-ads, classifieds, assignments, professionals, recruiting, united states, national, find, locate employers, resume builder, opportunities">
-	<meta name="classification" content="Internet">
-	<meta name="distribution" content="Global">
-	<meta name="rating" content="General">
-	<meta name="copyright" content="Artemis HR, Inc">
-	<meta name="author" content="Artemis HR - Advanced Human Resources Technology and Services. ">
-	<meta name="language" content="en-us">
-	<meta name="resource-type" content="document">
-	<meta name="revisit-after" content="10 days">
-	<meta http-equiv="reply-to" content="meta@4Jobs.com">
-<title>Worklife.com Career Center - Search Jobs, Find Companies, Post Your Resume</title>
-
-<link rel="stylesheet" type="text/css" href="/MKT/Style/main.css"></head>
-
-
-
-
-<body bgcolor="#FFFFFF" leftmargin="0" text="#000000" topmargin="0" marginheight="0" marginwidth="0" style="FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif" vlink="darkblue" link="darkblue" alink="darkblue" class="bodygrey">
-
-
-<table border="0" cellpadding="0" cellspacing="0" width="800" bgcolor="#FFFFFF" align="center"><tbody><tr><td><table border="0" cellpadding="0" cellspacing="0" width="800" align="center"><tbody><tr><td><table>
+  	<meta name="robots" content="index,follow">
+  	<meta name="description" content="Find the perfect job at Worklife.com.  Search thousands of jobs, post your resume and take advantage of all the free career tools for job seekers.  Employers - Get started today by posting your available jobs and begin your search for the ideal candidate. We provide a variety of recruitment services to meet the diverse and individual needs of corporate employers everywhere.">
+  	<meta name="keywords" content="career, search engine, monster resume database, career planning, FREE resume site, b2b, professional, job search agents, resume posting, business professional members, FREE job alerts, business professional member benefits, how to post resume, search jobs, contract, permanent, full-time, programming, consulting, high tech, computers, placement, employment, permanent, career, business, hiring, agreement, positions, want-ads, classifieds, assignments, professionals, recruiting, united states, national, find, locate employers, resume builder, opportunities">
+  	<meta name="classification" content="Internet">
+  	<meta name="distribution" content="Global">
+  	<meta name="rating" content="General">
+  	<meta name="copyright" content="Artemis HR, Inc">
+  	<meta name="author" content="Artemis HR - Advanced Human Resources Technology and Services. ">
+  	<meta name="language" content="en-us">
+  	<meta name="resource-type" content="document">
+  	<meta name="revisit-after" content="10 days">
+  	<meta http-equiv="reply-to" content="meta@4Jobs.com">
+  <title>Worklife.com Career Center - Search Jobs, Find Companies, Post Your Resume</title>
+  
+  <link rel="stylesheet" type="text/css" href="/MKT/Style/main.css"></head>
+  
+  
+  
+  
+  
+  <body bgcolor="#FFFFFF" leftmargin="0" text="#000000" topmargin="0" marginheight="0" marginwidth="0" style="FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif" vlink="darkblue" link="darkblue" alink="darkblue" class="bodygrey">
+  
+  
+  <table border="0" cellpadding="0" cellspacing="0" width="800" bgcolor="#FFFFFF" align="center"><tbody><tr><td><table border="0" cellpadding="0" cellspacing="0" width="800" align="center"><tbody><tr><td><table>
 <tbody><tr>
 <td>
 <img src="/companies/misc/worklife/worklife.gif">
 </td>
 </tr>
 </tbody></table>
-
-<table border="0" cellpadding="1" cellspacing="0" bgcolor="#34689A" width="100%"><tbody><tr><td>
-
-
-
-<table border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" width="100%"><tbody><tr>
-<td valign="top" height="100%">
-
-
+  
+  <table border="0" cellpadding="1" cellspacing="0" bgcolor="#34689A" width="100%"><tbody><tr><td>
+  
+  
+  
+  <table border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" width="100%"><tbody><tr>
+  <td valign="top" height="100%">
+  
+  
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#FFFFFF" align="center" height="100%">
 
@@ -49,7 +50,7 @@
    
     <td valign="top" width="100%">
 		
-		<table cellpadding="0" cellspacing="0" width="100%" border="0" bgcolor="#E3DFDF"><tbody><tr><td><table cellpadding="2" cellspacing="0" width="100%" border="0"><tbody><tr><td width="100%" align="left">&nbsp;<a href="/js/form/loginform.asp">Member Login</a></td><td align="right"><a href="/MKT/Content/EMP/Default.asp">Employers</a></td><td><a href="/MKT/Content/EMP/Default.asp"><img src="/common/images/channels/ch-arrow.gif" border="0"></a></td><td align="right"><a href="/JS/Form/PreChatLoad.asp?seg=JS&amp;pg=/JS/Action/Searchresults.asp" target="new"><img src="http://server.iad.liveperson.net/hc/66118572/?cmd=repstate&amp;site=66118572&amp;imageUrl=http://www.4jobs.com/Common/Images/LiveHelp/ChannelHelp/&amp;ver=1" name="hcIcon" border="0"></a></td></tr></tbody></table></td></tr></tbody></table>
+		<table cellpadding="0" cellspacing="0" width="100%" border="0" bgcolor="#E3DFDF"><tbody><tr><td><table cellpadding="2" cellspacing="0" width="100%" border="0"><tbody><tr><td width="100%" align="left">&nbsp;<a href="/js/form/loginform.asp">Member Login</a></td><td align="right"><a href="/MKT/Content/EMP/Default.asp">Employers</a></td><td><a href="/MKT/Content/EMP/Default.asp"><img src="/common/images/channels/ch-arrow.gif" border="0"></a></td><td align="right"><a href="/JS/Form/PreChatLoad.asp?seg=JS&amp;pg=/MKT/Content/JS/default.asp" target="new"><img src="http://server.iad.liveperson.net/hc/66118572/?cmd=repstate&amp;site=66118572&amp;imageUrl=http://www.4jobs.com/Common/Images/LiveHelp/ChannelHelp/&amp;ver=1" name="hcIcon" border="0"></a></td></tr></tbody></table></td></tr></tbody></table>
 		
 		<table cellpadding="10" cellspacing="0" width="100%" border="0">
 		  <tbody><tr>
@@ -139,7 +140,10 @@
 			</font></p><p><font face="verdana, helvetica, sans-serif">When you register with this site or one of its 
 			      affiliated web sites, we ask you for personal information. We use this 
 			      information to process your requests and to communicate with you about the 
-			      status of your requests. We may also use your email address to send you 
+			      status of your requests. For example, if you request additional information 
+            on other services, such as continuing education or student loan consolidation, 
+            we will share your information solely as is necessary to process your request.              
+            We may also use your email address to send you 
 			      newsletters you are subscribed to during registration, as well as messages 
 			      about any special offers, promotional announcements and consumer surveys.
 			      </font></p><p><font face="verdana, helvetica, sans-serif">We are the sole owners of the information collected on this site.  We will not sell, share, or rent this information to others in ways different from what is disclosed in this statement.  We collect information from our users at several different points on our website.
@@ -238,7 +242,7 @@ the information collected on our site is available to both companies.
 			on our system, no data transmission over the Internet can be guaranteed to be 
 			100% secure. As a result, we cannot guarantee the security of any information 
 			you transmit to us, and you do so at your own risk. 
-			      </font></p><p><font face="Verdana">When you place an order online at Artemis HR, your credit card 
+			      </font></p><p><font face="Verdana">When you place an order online at Beyond.com, your credit card 
 			      information is protected through the use of encryption, such as the Secure 
 			      Socket Layer ("SSL") protocol. SSL makes it difficult for your credit card 
 			      information to be intercepted or stolen while being transmitted. Artemis 
@@ -271,7 +275,7 @@ We believe that children should get their parents' consent before giving out per
 			<p><font><strong><font face="Verdana">Notification of 
 			Changes</font></strong>&nbsp; 
 			</font> 
-			</p><p><font face="verdana, helvetica, sans-serif">                                                    If we decide to change our privacy policy, we will post those changes&nbsp;here&nbsp;so our users are always aware of what information we  collect, how we use it, and under what circumstances, if any, we disclose it. If at any point you have questions or concerns about Artemis HR's privacy policy, please feel free to contact us. </font>
+			</p><p><font face="verdana, helvetica, sans-serif">                                                    If we decide to change our privacy policy, we will post those changes&nbsp;here&nbsp;so our users are always aware of what information we  collect, how we use it, and under what circumstances, if any, we disclose it. If at any point you have questions or concerns about Beyond.com's privacy policy, please feel free to contact us. </font>
 			</p><p><img height="5" alt="" hspace="0" src="/Common/Images/arrowup.gif" width="8" vspace="1" border="0"> <font face="verdana, helvetica, sans-serif" size="-2"><a href="#top">Back to 
 			top</a></font>
 			</p><p> 
@@ -330,41 +334,43 @@ We believe that children should get their parents' consent before giving out per
   </tr>
 </tbody></table>
 
-<table border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" width="100%">
-  <tbody><tr>
-    <td>	
-	<table border="0" bgcolor="#CCCCCC" cellpadding="0" cellspacing="0" width="100%" align="center">
-	<tbody><tr>	
-		<td colspan="5"><img height="1" src="/common/Images/HR.gif" width="100%"></td>	
-	</tr>
 
+  <table border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" width="100%">
+    <tbody><tr>
+      <td>	
+  	<table border="0" bgcolor="#CCCCCC" cellpadding="0" cellspacing="0" width="100%" align="center">
+  	<tbody><tr>	
+  		<td colspan="5"><img height="1" src="/common/Images/HR.gif" width="100%"></td>	
+  	</tr>
+  
+  
+  	  <tr height="22" valign="middle">
+  	  <td width="15">&nbsp;</td>
+  	  <td align="left" valign="middle">	
+  				<font size="1">	
+  					
+  				</font>	
+  	  </td>
+  	  <td align="right">
+  		<font size="1">
+  	  Worklife.com Career Center - Search Jobs, Find Companies, Post Your Resume
+  	  </font>
+  	  </td>
+  	  <td width="3" colspan="2">&nbsp;</td>
+  	  </tr>
+  
+  	<tr>	
+  		<td colspan="5"><img height="1" src="/common/Images/HR.gif" width="100%"></td>	
+  	</tr>
+  	</tbody></table>
+      </td>
+    </tr>
+    <tr bgcolor="#34689A" height="10">
+      <td>&nbsp;</td>
+    </tr>
+  	
+  </tbody></table>
 
-	  <tr height="22" valign="middle">
-	  <td width="15">&nbsp;</td>
-	  <td align="left" valign="middle">	
-				<font size="1">	
-					
-				</font>	
-	  </td>
-	  <td align="right">
-		<font size="1">
-	  Worklife.com Career Center - Search Jobs, Find Companies, Post Your Resume
-	  </font>
-	  </td>
-	  <td width="3" colspan="2">&nbsp;</td>
-	  </tr>
-
-	<tr>	
-		<td colspan="5"><img height="1" src="/common/Images/HR.gif" width="100%"></td>	
-	</tr>
-	</tbody></table>
-    </td>
-  </tr>
-  <tr bgcolor="#34689A" height="10">
-    <td>&nbsp;</td>
-  </tr>
-	
-</tbody></table>
 
 </td></tr></tbody></table>
 
@@ -377,14 +383,14 @@ We believe that children should get their parents' consent before giving out per
 	
 	<td valign="top">
 		<a href="#top" class="link"><img src="/common/Images/top.gif" border="0" alt="Go to the Top"></a>
-		</td><td valign="top"><font size="1">© Copyright 2001-2005&nbsp;<a href="http://worklife.com">Worklife.com</a>&nbsp; All rights reserved.
-		<br>4Jobs.com <a href="/MKT/Affiliate/AffiliateInfo.asp#portal">Career Portal Software</a>.  © Copyright 2001-2005&nbsp;<a target="_blank" href="http://www.ArtemisHR.com/Default.asp?src=worklife">Artemis HR</a>, Inc.
-		<br><a href="/MKT/Content/JS/default.asp?pg=privacy">Privacy Policy</a>&nbsp;&nbsp;<a href="/MKT/Content/JS/default.asp?pg=terms">Terms of Service</a>&nbsp;&nbsp;<a href="/MKT/Content/Network.asp">Online Communities</a>&nbsp;&nbsp;<a href="/MKT/Content/JS/default.asp?pg=faq">FAQ</a>&nbsp;&nbsp;<a href="/MKT/Affiliate/AffiliateInfo.asp">Affiliates</a>&nbsp;&nbsp;<a href="http://www.artemishr.com/Common/Form/ContactUsForm.asp?src=worklife&amp;s=Partnerships">Partnerships</a>&nbsp;&nbsp;<a href="/JS/Form/ContactUsForm.asp">Contact Us</a><br>Syndicated Career Content: Job Feeds via <a href="/MKT/RSS/">RSS/XML</a> and <a href="/MKT/RSS/">Yahoo</a>. 
+		</td><td valign="top"><font size="1">© Copyright 2001-2006&nbsp;<a href="http://worklife.com">Worklife.com</a>&nbsp; All rights reserved.
+		<br>Beyond.com <a href="http://www.beyond.com/Content/PortalOverview.asp?hn=y&amp;src=worklife">Career Portal Software</a>.  © Copyright 2001-2006&nbsp;<a target="_blank" href="http://www.beyond.com/content/AboutUs.asp?hn=y&amp;src=worklife">Beyond.com</a>, Inc.
+		<br><a href="/MKT/Content/JS/default.asp?pg=privacy">Privacy Policy</a>&nbsp;&nbsp;<a href="/MKT/Content/JS/default.asp?pg=terms">Terms of Service</a>&nbsp;&nbsp;<a href="/MKT/Content/Network.asp">Online Communities</a>&nbsp;&nbsp;<a href="/MKT/Content/JS/default.asp?pg=faq">FAQ</a>&nbsp;&nbsp;<a href="/MKT/Affiliate/AffiliateInfo.asp">Affiliates</a>&nbsp;&nbsp;<a href="http://www.beyond.com/Content/WebCommunities.asp?hn=y&amp;src=worklife">Partnerships</a>&nbsp;&nbsp;<a href="http://beyond.com/Content/WebCommunities.asp">Lead Generation</a>&nbsp;&nbsp;<a href="/JS/Form/ContactUsForm.asp">Contact Us</a><br>Syndicated Career Content: Job Feeds via <a href="/MKT/RSS/">RSS/XML</a> and <a href="/MKT/RSS/">Yahoo</a>. 
 	</font></td>
 	
 	
 	<td colspan="2" valign="top" align="right">
-		<a target="_blank" href="http://www.ArtemisHr.com/Default.asp?src=worklife"><img src="/common/Images/PoweredBy.gif" border="0" alt="Powered by 4Jobs.com"></a>
+		<a target="_blank" href="http://www.beyond.com/Content/PortalOverview.asp?hn=y&amp;src=worklife"><img src="/common/Images/PoweredBy.gif" border="0" alt="Powered by Beyond.com"></a>
 	</td>	
 
 	</tr>
@@ -397,4 +403,9 @@ We believe that children should get their parents' consent before giving out per
 
 
 </td></tr></tbody></table>
+
+
+
+
+
 </td></tr></tbody></table></body></html>
