--- a/f/fr/fre/freelanceuk.com.html
+++ b/f/fr/fre/freelanceuk.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freelanceuk.com privacy policy that was archived on 2005-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051229045544id_/http%3A//www.freelanceuk.com/about/privacy_statement.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freelanceuk.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614222953id_/http%3A//www.freelanceuk.com/about/privacy_statement.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Statement :: Freelance UK</title>
@@ -47,26 +47,23 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 //picks a random number
 	var seed, rnum, rand
 	seed = new Date();
-	rnum = Math.floor(seed.getSeconds() / 8);
-	rand = Math.floor(Math.random() * 8);
-	rnum = Math.floor((rnum * rand) % 8);
+	rnum = Math.floor(seed.getSeconds() / 7);
+	rand = Math.floor(Math.random() * 7);
+	rnum = Math.floor((rnum * rand) % 7);
 	//puts image names into an array
-	var theimage = new Array(8);
+	var theimage = new Array(7);
 	theimage[0] = "<a href='http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.freelanceuk.com/money/index.shtml&page=home,banner' title='Freelancer Money'><img src='/images/ads/banners/bannerCM004.gif' border='0' alt='Freelancer Money'></a>";
 	theimage[1] = "<a href='http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.quayaccounting.com/main.htm&page=home,banner' title='Quay Accounting' target='_blank'><img src='/images/ads/banners/qualarge.gif' border='0' alt='Quay Accounting'></a>";
-	theimage[2] = "<a href='http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.sjdaccountancy.com/splash.html&page=home,banner' title='SJD Accountancy' target='_blank'><img src='/images/ads/banners/sjdlarge.gif' border='0' alt='SJD Accountancy'></a>";
+	theimage[2] = "<a href='http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.sjdaccountancy.com/about/sjd_bespoke.html&page=home,banner' title='SJD Accountancy' target='_blank'><img src='/images/ads/banners/sjdlarge.gif' border='0' alt='SJD Accountancy'></a>";
 	theimage[3] = "<a href='http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.contractorumbrella.com&page=home,banner' title='Contractor Umbrella' target='_blank'><img src='/images/ads/banners/contractor_umblarge.gif' border='0' alt='Contractor Umbrella'></a>";
 	theimage[4] = "<a href='http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.nolongerlimited.com/&page=home,banner' title='No Longer Limited' target='_blank'><img src='/images/ads/banners/nll_large.gif' border='0' alt='No Longer Limited'></a>";
 	theimage[5] = "<a href='http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.norlaconsulting.co.uk/freelanceuk.asp&page=home,banner' title='Norla Consulting' target='_blank'><img src='/images/ads/banners/norla_large.gif' border='0' alt='Norla Consulting'></a>";
-	//theimage[6] = "<a href='http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://s0b.bluestreak.com/ix.e?hr&s=502141&n=Insert_Time_Date_Stamp_Here&page=home,banner' title='Hiscox' target='_blank'><img src='http://s0b.bluestreak.com/ix.e?ir&s=500889' border='0' alt='Hiscox PI'></a>";
 	theimage[6] = "<a href='http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.armchairanswercall.com/index.asp%3fref=FLU&page=home,banner'><img src='/images/ads/banners/armchair_large.gif' border='0' alt='Armchair Answercall' /></a>";
-	theimage[7] = "<a href='http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.lemonstudioslondon.com/&page=home,banner'><img src='/images/ads/banners/LemonBanner_468X60.gif' border='0' alt='Lemon Studios' /></a>";
-
 
 	//writes the line to display the random image
 	document.write(theimage[rnum]);
 	// -->
-</script><a href="http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.freelanceuk.com/money/index.shtml&amp;page=home,banner" title="Freelancer Money"><img src="/images/ads/banners/bannerCM004.gif" border="0" alt="Freelancer Money"></a>
+</script><a href="http://www.cukjobs.co.uk/ClickTrack/freelanceuk.ashx?file=http://www.quayaccounting.com/main.htm&amp;page=home,banner" title="Quay Accounting" target="_blank"><img src="/images/ads/banners/qualarge.gif" border="0" alt="Quay Accounting"></a>
 
 			</div>
 		</div>
@@ -229,13 +226,13 @@ Click <a href="http://lb.bcentral.com/ex/manage/subscriberprefs.aspx?customerid=
 <h2>Top Articles</h2>
 	<div id="topArticlesContainer">
 	<ul>
-		<li><a href="http://www.freelanceuk.com/news/1483.shtml">Brown unveils tax take on UK entrepreneurs</a></li>
-		<li><a href="http://www.freelanceuk.com/news/1427.shtml">Death knell sounds for company secretaries</a></li>
-		<li><a href="http://www.freelanceuk.com/1486.shtml">How to hunt for a company logo</a></li>
-		<li><a href="http://www.freelanceuk.com/1478.shtml">Designers' free ideas cost £38,000</a></li>
-		<li><a href="http://www.freelanceuk.com/news/1464.shtml">Pitch your big idea to a Web of investors</a></li>
-	</ul>
-  </div>
+		<li><a href="http://www.freelanceuk.com/news/1687.shtml">Home working 'worth £10,000'</a></li>
+		<li><a href="http://www.freelanceuk.com/news/1692.shtml">UK freelancers reject 'entrepreneurship'</a></li>
+		<li><a href="http://www.freelanceuk.com/1690.shtml">Budding photographers focus on £10,000</a></li>
+		<li><a href="http://www.freelanceuk.com/news/1710.shtml">Golden tickets on offer for Enterprise Nation '06
+</a></li>
+		<li><a href="http://www.freelanceuk.com/news/1550.shtml">Networking tips for freelancers</a></li>
+</ul></div>
 </div>
    
    
@@ -314,7 +311,7 @@ function wtl_Tag5_155203()
 
 wtl_Tag5_155203();
 //-->
-</script><img id="WTL_155203" border="0" width="1" height="1" src="https://statse.webtrendslive.com/S155203/button5.asp?tagver=5&amp;si=155203&amp;fw=1&amp;server=&amp;Group=&amp;tz=0&amp;ch=1&amp;cl=K1V1fX7&amp;ti=Privacy%20Statement%20%3A%3A%20Freelance%20UK&amp;url=https%3A//web.archive.org/web/20051229045544id_/http%253A//www.freelanceuk.com/about/privacy_statement.shtml&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No">
+</script><img id="WTL_155203" border="0" width="1" height="1" src="https://statse.webtrendslive.com/S155203/button5.asp?tagver=5&amp;si=155203&amp;fw=1&amp;server=&amp;Group=&amp;tz=0&amp;ch=1&amp;cl=K1V1fX7&amp;ti=Privacy%20Statement%20%3A%3A%20Freelance%20UK&amp;url=https%3A//web.archive.org/web/20060614222953id_/http%253A//www.freelanceuk.com/about/privacy_statement.shtml&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No">
 <noscript>
 <IMG BORDER="0" WIDTH="1" HEIGHT="1" SRC="http://statse.webtrendslive.com/S155203/button5.asp?tagver=5&si=155203&fw=1&js=No&">
 </noscript>
