--- a/i/in/ind/indiatodaygroup.com.html
+++ b/i/in/ind/indiatodaygroup.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the indiatodaygroup.com privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217183510id_/http%3A//www.indiatodaygroup.com/privacy.phtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the indiatodaygroup.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614225215id_/http%3A//www.indiatodaygroup.com/privacy.phtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>INDIA TODAY GROUP | India Today , Business Today, Aaj Tak, Care Today, Today, Cosmopolitan, Reader's Digest, India Today Conclave</title>
@@ -34,6 +34,17 @@ function openWindow(val){
 <script language="javascript1.2" src="http://www.indiatodaygroup.com/menu/menu1_files/bg.js" type="text/javascript"></script>
 <script language="JavaScript1.2" src="http://www.indiatodaygroup.com/menu/menu1_files/menus_def.js" type="text/javascript"></script>
 <script language="JavaScript1.2" src="http://www.indiatodaygroup.com/menu/menu1_files/mm_menu.js" type="text/javascript"></script>
+<style type="text/css">
+<!--
+.unnamed1 {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 11px;
+	color: #FFFFFF;
+	text-decoration: none;
+	font-weight: bold;
+}
+-->
+</style>
 
 <script language="JavaScript1.1">mmLoadMenus("");</script>
 <table width="780" border="0" cellspacing="0" cellpadding="0" align="center" background="grfx/header-temp.jpg">
@@ -50,7 +61,43 @@ function openWindow(val){
             <table width="600" border="0" cellspacing="0" cellpadding="0">
               <tbody><tr> 
                 <td align="center" width="106"><a href="http://www.indiatodaygroup.com/?"><img src="grfx/itg-logo.gif" width="85" height="63" border="0" alt="India Today Group" title="India Today Group"></a></td>
-                <td align="center" width="494"><a href="http://www.indiatoday.com/?"><img src="grfx/breaking1.gif" width="468" height="60" border="0" alt="India Today" title="India Today"></a></td>
+                <td align="center" width="494"><!--<a href="http://www.indiatoday.com/?"><img src="grfx/breaking1.gif" width="468" height="60" border="0" alt="India Today" title="India Today"></a>-->
+				<!--- Indiads Code Starts. Do NOT Modify --->
+				<script language="JavaScript1.1" src="http://www.indiads.com/RealMedia/ads/adstream_jx.cgi/home.indiatodaygroup.com/@Top">
+				</script>
+				<script language="JavaScript">
+				<!--
+				_version=10;
+				//-->
+				</script>
+				<script language="JavaScript1.1"> 
+				<!--
+				_version=11;
+				// -->
+				</script>
+				<script language="JavaScript">
+				<!-- 
+				if (navigator.appVersion.indexOf("MSIE 3") != -1){
+				document.write('<IFRAME WIDTH=460 HEIGHT=120 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no BORDERCOLOR="#000000" SRC="http://www.indiads.com/RealMedia/ads/adstream_sx.cgi/home.indiatodaygroup.com/@Top"></iframe>'); 
+				} else if (_version < 11) {
+				  document.write ('<A HREF="http://www.indiads.com/RealMedia/ads/click_nx.cgi/home.indiatodaygroup.com/@Top?x"><IMG SRC="http://www.indiads.com/RealMedia/ads/adstream_nx.cgi/home.indiatodaygroup.com/@Top?x"></a>');
+				}
+				// -->
+				</script>
+				<noscript>
+				<A HREF="http://www.indiads.com/RealMedia/ads/click_nx.cgi/home.indiatodaygroup.com/@Top?x">
+					<IMG SRC="http://www.indiads.com/RealMedia/ads/adstream_nx.cgi/home.indiatodaygroup.com/@Top?x">
+				</A>
+				</noscript>
+				<!--- Indiads Code Ends --->
+				</td>
+              </tr>
+              <tr> 
+                <td colspan="2" align="center" class="HEAD"><img src="grfx/trans.gif" width="10" height="10"></td>
+              </tr>
+              <tr> 
+                <td align="center" class="HEAD"><a href="http://www.indiatodaygroup.com/careers/career.php" target="_blank" class="unnamed1">CAREER</a></td>
+                <td align="center">&nbsp;</td>
               </tr>
             </tbody></table>
           </td>
@@ -128,7 +175,7 @@ function openWindow(val){
       Utsav</a></td>
     <td width="113"><a href="http://www.thomsonpress.com/?" class="link1" target="_blank">Thomson 
       Press</a></td>
-    <td width="130"><a href="http://www.indiatodayplus.com/oct2004/index.html" class="link1" target="_blank">IT 
+    <td width="130"><a href="http://www.indiatodayplus.com/oct2005/index.html" class="link1" target="_blank">IT 
       Travel Plus</a></td>
   </tr>
 </tbody></table>
