--- a/l/la/lab/labsafety.com.html
+++ b/l/la/lab/labsafety.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the labsafety.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230072052id_/http%3A//www.labsafety.com/aboutus/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the labsafety.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614233702id_/http%3A//www.labsafety.com/aboutus/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Lab Safety Supply - Privacy Statement</title>
@@ -34,7 +34,7 @@
 		-->
 	</style>
 
-<link rel="shortcut icon" href="favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico">
 <link rel="stylesheet" type="text/css" href="/scripts/lssstyle.css">
 
 <script language="javascript" src="/scripts/header.js" type="text/javascript"></script>
@@ -297,14 +297,59 @@ and ask to be removed from all e-comm promotions.</font></p>
 	</tr>
 </tbody></table>
 
+<!-- SiteCatalyst code version: H.2.
+Copyright 1997-2005 Omniture, Inc. More info available at
+http://www.omniture.com -->
+<script language="JavaScript" src="/scripts/s_code_prod.js"></script><img name="s_i_labsafetycom" height="1" width="1" border="0" alt="" src="https://smetrics.labsafety.com/b/ss/labsafetycom/1/H.3-Pdv-2/s62658562030147?[AQB]&amp;ndh=1&amp;t=31/0/2020%202%3A50%3A31%205%200&amp;ns=labsafetysupply&amp;pageName=Lab%20Safety%20Supply%20-%20Privacy%20Statement&amp;g=https%3A//web.archive.org/web/20060614233702id_/http%253A//www.labsafety.com/aboutus/privacy.htm&amp;cc=USD&amp;ch=/aboutus/&amp;server=2&amp;c1=NEW&amp;v1=NEW&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+<script language="JavaScript"><!--
+s.pageName=document.title
+s.server="2"
+if (document.title == "Lab Safety Supply - File Not Found"){
+	s.pageType="errorPage"
+}else{
+	s.channel="/aboutus/"
+	s.prop1="NEW"
+	s.prop2=""
+	s.prop3=""
+
+	s.prop5=""
+	s.prop6=""
+	s.prop7=""
+	s.prop7=s.prop7.toUpperCase()
+	s.events = ""
+	s.products=""
+	s.purchaseID=""
+	s.eVar1="NEW"
+	
+			s.eVar2=""
+		
+		s.eVar4=""
+
+	s.eVar5=""
+
+	s.eVar6=""
+	s.eVar7=""
+	
+	s.state=""
+	s.zip=""
+s.hier2=""
+}
+/************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
+var s_code=s.t();if(s_code)document.write(s_code)//--></script>
+<script language="JavaScript"><!--
+if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
+//--></script>
+<!-- End SiteCatalyst code version: H.2. -->
+
 <br>
 
-
 <div class="footer_table">
-<div align="center"><a href="/home.htm" class="afoot">Home</a> | <a href="/custserv/" class="afoot">Our Guarantee</a> | <a href="/aboutus/privacy.htm" class="afoot"><font color="#003399">Privacy Statement</font></a> | <a href="/aboutus/termsofaccess.htm" class="afoot">Terms of Access</a> | <a href="/aboutus/trademarks.htm" class="afoot">Trademarks</a> | <a href="/custserv/contactus.htm" class="afoot">Contact Us</a> | <a href="/sitemap.htm" class="afoot">Sitemap</a><br>
-                            <strong>Questions and Orders: Call 1-800-356-0783
-                            or Fax 1-800-543-9910</strong><br>© 2005 Lab Safety Supply Inc.</div>
+	<div align="center"><a href="/home.htm" class="afoot">Home</a> | <a href="/custserv/" class="afoot">Our Guarantee</a> | <a href="/aboutus/privacy.htm" class="afoot"><font color="#003399">Privacy Statement</font></a> | <a href="/aboutus/termsofaccess.htm" class="afoot">Terms of Access</a> | <a href="/aboutus/trademarks.htm" class="afoot">Trademarks</a> | <a href="/custserv/contactus.htm" class="afoot">Contact Us</a> | <a href="/sitemap.htm" class="afoot">Sitemap</a><br>
+		<strong>Questions and Orders: Call 1-800-356-0783
+		or Fax 1-800-543-9910</strong><br>© 2006 Lab Safety Supply Inc.
+	</div>
 </div>
+
 <div class="googleHide">	<script language="JavaScript" type="text/javascript">
 	<!--
 	var google_conversion_id = 1068806774;
@@ -323,9 +368,10 @@ and ask to be removed from all e-comm promotions.</font></p>
 	<noscript>
 	<img height=1 width=1 border=0 src="http://www.googleadservices.com/pagead/conversion/1068806774/?value=1&label=Default&script=0">
 	</noscript>   
-	</div><!-- 3 -->
+	</div><!-- 2 -->
 </td>
 </tr>
 </tbody></table>
+
 
 </body></html>
