--- a/t/th/thi/thinkquest.org.html
+++ b/t/th/thi/thinkquest.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thinkquest.org privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219134045id_/http%3A//thinkquest.org/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thinkquest.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615000739id_/http%3A//thinkquest.org/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -431,7 +431,13 @@ body {
   <tr>
     <td colspan="3"><img src="/common/spacer.gif" width="1" height="15" alt=""></td>
   </tr>
-</tbody></table> 
+</tbody></table>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript">
+  _uacct = "UA-174705-5";
+  urchinTracker();
+</script>
+ 
 </div>
 
 
